--- a/manifest.json
+++ b/manifest.json
@@ -11,37 +11,37 @@
 
      "icons": [
         {
-        "src": "/pwa%20ben%2010/img/favicon/android-icon-36x36.png",
+        "src": "./img/favicon/android-icon-36x36.png",
         "sizes": "36x36",
         "type": "image/png"
         },
         {
-        "src": "/pwa%20ben%2010/img/favicon/android-icon-48x48.png",
+        "src": "./img/favicon/android-icon-48x48.png",
         "sizes": "48x48",
         "type": "image/png"
         },
         {
-        "src": "/pwa%20ben%2010/img/favicon/android-icon-72x72.png",
+        "src": "./img/favicon/android-icon-72x72.png",
         "sizes": "72x72",
         "type": "image/png"
         },
         {
-        "src": "/pwa%20ben%2010/img/favicon/android-icon-96x96.png",
+        "src": "./img/favicon/android-icon-96x96.png",
         "sizes": "96x96",
         "type": "image/png"
         },
         {
-        "src": "/pwa%20ben%2010/img/favicon/ms-icon-144x144.png",
+        "src": "./img/favicon/ms-icon-144x144.png",
         "sizes": "144x144",
         "type": "image/png"
         },
         {
-        "src": "/pwa%20ben%2010/img/favicon/android-chrome-512x512.png",
+        "src": "./img/favicon/android-chrome-512x512.png",
         "sizes": "512x512",
         "type": "image/png"
         },
         {
-        "src": "/pwa%20ben%2010/img/favicon/favicon-192x192.png",
+        "src": "./img/favicon/favicon-192x192.png",
         "sizes": "192x192",
         "type": "image/png"
         }
